--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "sass": "^1.77.6",
     "standard": "^17.1.0",
     "ts-jest": "^29.1.5",
