--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prepare": "pnpx husky"
+    "prepare": "pnpx husky",
+    "test": "npx jest"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -33,6 +34,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
     "react-infinite-scroll-component": "^6.1.0",
@@ -41,8 +43,7 @@
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1",
-    "whatwg-fetch": "^3.6.20"
+    "vite": "^5.3.1"
   },
   "eslintConfig": {
     "extends": "./node_modules/standar/eslintrc.json"
