--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
@@ -30,6 +29,5 @@
       "@utils/*": ["src/utils/*"]
     }
   },
-  "references": [{ "path": "./tsconfig.node.json" }],
   "filesGlob": ["src/**/*.ts"]
 }
